--- a/Staff/Login/index.html
+++ b/Staff/Login/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>kk</title>
-</head>
-<body>
-
-</body>
-</html>
+../../Default/index.html
